--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 chrono = "0.4.22"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+rand = "0.8.5"
