--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+actix-cors = "0.6.2"
 chrono = "0.4.22"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rand = "0.8.5"
+tera = "1"
