--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 actix-cors = "0.6.2"
+diesel = { version = "2.0.0", features = ["mysql"] }
+dotenv = "0.15.0"
 chrono = "0.4.22"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
